--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Charles Ancheta Jr.
-logo: img/snapshot.JPG
+logo: /img/snapshot.JPG
 # description:
 # show_downloads:
 theme: jekyll-theme-minimal
